--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     -->
     <title>Note.cloud</title>
   </head>
-  <body class="bg-gray-900">
+  <body class="bg-gray-900" id="body">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
